--- a/cookie.html
+++ b/cookie.html
@@ -7,16 +7,46 @@
     </header>
     <h1>
         Cookie
+        <sup>
+            Cookie
+            <sub>
+                Cookie
+                <sup>
+                    Cookie
+                    <sub>
+                        Cookie
+                        <sup>
+                            Cookie
+                            <sub>
+                                Cookie
+                            </sub>
+                        </sup>
+                    </sub>
+                </sup>
+            </sub>
+        </sup>
     </h1>
     <img src="picture/cookie.webp" width="200">
+    <br/>
+    <caption>Cookies are great</caption>
+    <hr/>
+    <br/>
+    <h2><u>Ingredients</u></h2>
     <details>
         <summary>
-            Click here for recipe
+            Click here for a list of ingredients
         </summary>
         <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
+            <li>1 cup <span>salted butter</span></li>
+            <li>1 cup white sugar</li>
+            <li>1 cut light brown sugar</li>
+            <li>2 tsp vanilla extract</li>
+            <li>2 eggs</li>
+            <li>3 cups all-purpose flower</li>
+            <li>1 tsp baking soda</li>
+            <li>1/2 tsp baking powder</li>
+            <li>1 tsp sea salt</li>
+            <li>2 cups chocolate chips</li>
         </ul>
     </details>
 </html>
