--- a/cookie.html
+++ b/cookie.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <header>
-        <button onclick="window.location.href = 'index.html';">
-            Home
-        </button>
-    </header>
-    <h1>
-        Cookie
-        <sup>
+    <body>
+        <header>
+            <button onclick="window.location.href = 'index.html';">
+                Home
+            </button>
+        </header>
+        <h1>
             Cookie
-            <sub>
+            <sup>
                 Cookie
-                <sup>
+                <sub>
                     Cookie
-                    <sub>
+                    <sup>
                         Cookie
-                        <sup>
+                        <sub>
                             Cookie
-                            <sub>
+                            <sup>
                                 Cookie
-                            </sub>
-                        </sup>
-                    </sub>
-                </sup>
-            </sub>
-        </sup>
-    </h1>
-    <img src="picture/cookie.webp" width="200">
-    <br/>
-    <caption>Cookies are great</caption>
-    <hr/>
-    <br/>
-    <h2><u>Ingredients</u></h2>
-    <details>
-        <summary>
-            Click here for a list of ingredients
-        </summary>
-        <ul>
-            <li>1 cup <span>salted butter</span></li>
-            <li>1 cup white sugar</li>
-            <li>1 cut light brown sugar</li>
-            <li>2 tsp vanilla extract</li>
-            <li>2 eggs</li>
-            <li>3 cups all-purpose flower</li>
-            <li>1 tsp baking soda</li>
-            <li>1/2 tsp baking powder</li>
-            <li>1 tsp sea salt</li>
-            <li>2 cups chocolate chips</li>
-        </ul>
-    </details>
+                                <sub>
+                                    Cookie
+                                </sub>
+                            </sup>
+                        </sub>
+                    </sup>
+                </sub>
+            </sup>
+        </h1>
+        <img src="picture/cookie.webp" width="200" alt="Cookie">
+        <br>
+        <small>Cookies are great</small>
+        <hr>
+        <br>
+        <h2><u>Ingredients</u></h2>
+        <details>
+            <summary>
+                Click here for a list of ingredients
+            </summary>
+            <ul>
+                <li>1 cup <span>salted butter</span></li>
+                <li>1 cup white sugar</li>
+                <li>1 cut light brown sugar</li>
+                <li>2 tsp vanilla extract</li>
+                <li>2 eggs</li>
+                <li>3 cups all-purpose flower</li>
+                <li>1 tsp baking soda</li>
+                <li>1/2 tsp baking powder</li>
+                <li>1 tsp sea salt</li>
+                <li>2 cups chocolate chips</li>
+            </ul>
+        </details>
+    </body>
+    
 </html>
