--- a/cookie.html
+++ b/cookie.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <title>Cookies</title>
+    </head>
     <body>
         <header>
             <button onclick="window.location.href = 'index.html';">
