--- a/turtle.html
+++ b/turtle.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <body>
+        <head>
+            <title>Turtles</title>
+        </head>
         <header>
             <button onclick="window.location.href = 'index.html';">
                 Home
