--- a/turtle.html
+++ b/turtle.html
@@ -11,8 +11,15 @@
             </button>
         </header>
         <h1>Random Turtle Fact</h1>
-        <!-- Add image -->
+        <figure>
+            <img src="picture/turtle.webp" width="200" alt="A very nice turtle">
+            <figcaption>A very nice turtle</figcaption>
+        </figure>
+        
         <dl>
+            <dt>A group of eggs is known as a clutch</dt>
+            <dd>Sea turtles usually lay 100-125 eggs per nest</dd>
+
             <dt>A group of eggs is known as a clutch</dt>
             <dd>Sea turtles usually lay 100-125 eggs per nest</dd>
         </dl>
