Changed button to a

--- a/cookie.html
+++ b/cookie.html
@@ -35,24 +35,40 @@
         <small>Cookies are great</small>
         <hr>
         <br>
-        <h2><u>Ingredients</u></h2>
-        <details>
-            <summary>
-                Click here for a list of ingredients
-            </summary>
+        <section>
+            <h2><u>Ingredients</u></h2>
+            <details>
+                <summary>
+                    Click here for a list of ingredients
+                </summary>
+                <ul>
+                    <li>1 cup <span>salted butter</span></li>
+                    <li>1 cup white sugar</li>
+                    <li>1 cut light brown sugar</li>
+                    <li>2 tsp vanilla extract</li>
+                    <li>2 eggs</li>
+                    <li>3 cups all-purpose flower</li>
+                    <li>1 tsp baking soda</li>
+                    <li>1/2 tsp baking powder</li>
+                    <li>1 tsp sea salt</li>
+                    <li>2 cups chocolate chips</li>
+                </ul>
+            </details>
+        </section>
+        <section>
+            <h2><u>Instructions</u></h2>
             <ul>
-                <li>1 cup <span>salted butter</span></li>
-                <li>1 cup white sugar</li>
-                <li>1 cut light brown sugar</li>
-                <li>2 tsp vanilla extract</li>
-                <li>2 eggs</li>
-                <li>3 cups all-purpose flower</li>
-                <li>1 tsp baking soda</li>
-                <li>1/2 tsp baking powder</li>
-                <li>1 tsp sea salt</li>
-                <li>2 cups chocolate chips</li>
+                <li>Preheat oven to 375 degrees F.</li>
+                <li>Mix flour, baking soda, salt, baking powder</li>
+                <li>In a separate bowl, mix butter and sugars until well combined</li>
+                <li>Beat in eggs and vanilla until fluffy</li>
+                <li>Mix in dry ingredients until well combined</li>
+                <li>Add chocolate chips and mix well</li>
+                <li>Roll 2 TBS of dough into balls and place on baking pan</li>
+                <li>Bake for 8-10 minutes</li>
             </ul>
-        </details>
+        </section>
+        
     </body>
     
 </html>
