--- a/turtle.html
+++ b/turtle.html
@@ -20,8 +20,8 @@
             <dt>A group of eggs is known as a clutch</dt>
             <dd>Sea turtles usually lay 100-125 eggs per nest</dd>
 
-            <dt>A group of eggs is known as a clutch</dt>
-            <dd>Sea turtles usually lay 100-125 eggs per nest</dd>
+            <dt>The gender of sea turtles is determined by the temperature in the nest</dt>
+            <dd>Eggs incubating below 82 degrees Faharenheit will be male. Eggs incubating above 89 degrees Fahrenheit will be female</dd>
         </dl>
     </body>
 </html>
