--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     </head>
     <body> 
         <header>
-            <h1>Hello :)</h1>
+            <h1>Welcome</h1>
+            <pre>
+        _/    _/    _/_/_/_/    _/          _/          _/_/
+       _/    _/    _/          _/          _/        _/    _/
+      _/_/_/_/    _/_/_/      _/          _/        _/    _/
+     _/    _/    _/          _/          _/        _/    _/
+    _/    _/    _/_/_/_/    _/_/_/_/    _/_/_/_/    _/_/
+            </pre>
+            <ruby>
+                你<rp>(</rp><rt>Nǐ</rt><rp>)</rp>好<rp>(</rp><rt>hǎo</rt><rp>)</rp>
+            </ruby>
             <p>My name is <strong>Joshua</strong> and I am a third year CS student</p>
         </header>
         <section>
