--- a/turtle.html
+++ b/turtle.html
@@ -10,7 +10,7 @@
                 Home
             </button>
         </header>
-        <h1>Random Turtle Fact</h1>
+        <h1>Random Turtle Facts</h1>
         <figure>
             <img src="picture/turtle.webp" width="200" alt="A very nice turtle">
             <figcaption>A very nice turtle</figcaption>
