--- a/html/cookie.html
+++ b/html/cookie.html
@@ -30,7 +30,7 @@
                 </sub>
             </sup>
         </h1>
-        <img src="picture/cookie.webp" width="200" alt="Cookie">
+        <img src="../picture/cookie.webp" width="200" alt="Cookie">
         <br>
         <small>Cookies are great</small>
         <hr>
