--- a/html/turtle.html
+++ b/html/turtle.html
@@ -12,7 +12,7 @@
         </header>
         <h1>Random Turtle Facts</h1>
         <figure>
-            <img src="picture/turtle.webp" width="200" alt="A very nice turtle">
+            <img src="../picture/turtle.webp" width="200" alt="A very nice turtle">
             <figcaption>A very nice turtle</figcaption>
         </figure>
         
