--- a/html/cookie.html
+++ b/html/cookie.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <button onclick="window.location.href = 'index.html';">
+            <button onclick="window.location.href = '../index.html';">
                 Home
             </button>
         </header>
