--- a/html/turtle.html
+++ b/html/turtle.html
@@ -6,7 +6,7 @@
     <body>
         
         <header>
-            <button onclick="window.location.href = 'index.html';">
+            <button onclick="window.location.href = '../index.html';">
                 Home
             </button>
         </header>
