--- a/html/cookie.html
+++ b/html/cookie.html
@@ -2,73 +2,77 @@
 <html lang="en">
     <head>
         <title>Cookies</title>
+        <link rel="stylesheet" href="../css/general.css">
     </head>
     <body>
-        <header>
-            <button onclick="window.location.href = '../index.html';">
-                Home
-            </button>
-        </header>
-        <h1>
-            Cookie
-            <sup>
+        <nav class="nav">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="turtle.html">Turtle</a></li>
+                <li><a class="active" href="#">Cookie</a></li>
+            </ul>
+        </nav>
+        <div class="content">
+            <h1>
                 Cookie
-                <sub>
+                <sup>
                     Cookie
-                    <sup>
+                    <sub>
                         Cookie
-                        <sub>
+                        <sup>
                             Cookie
-                            <sup>
+                            <sub>
                                 Cookie
-                                <sub>
+                                <sup>
                                     Cookie
-                                </sub>
-                            </sup>
-                        </sub>
-                    </sup>
-                </sub>
-            </sup>
-        </h1>
-        <img src="../picture/cookie.webp" width="200" alt="Cookie">
-        <br>
-        <small>Cookies are great</small>
-        <hr>
-        <br>
-        <section>
-            <h2><u>Ingredients</u></h2>
-            <details>
-                <summary>
-                    Click here for a list of ingredients
-                </summary>
-                <ul>
-                    <li>1 cup <span>salted butter</span></li>
-                    <li>1 cup white sugar</li>
-                    <li>1 cut light brown sugar</li>
-                    <li>2 tsp vanilla extract</li>
-                    <li>2 eggs</li>
-                    <li>3 cups all-purpose flower</li>
-                    <li>1 tsp baking soda</li>
-                    <li>1/2 tsp baking powder</li>
-                    <li>1 tsp sea salt</li>
-                    <li>2 cups chocolate chips</li>
-                </ul>
-            </details>
-        </section>
-        <section>
-            <h2><u>Instructions</u></h2>
-            <ol>
-                <li>Preheat oven to 375 degrees F.</li>
-                <li>Mix flour, baking soda, salt, baking powder</li>
-                <li>In a separate bowl, mix butter and sugars until well combined</li>
-                <li>Beat in eggs and vanilla until fluffy</li>
-                <li>Mix in dry ingredients until well combined</li>
-                <li>Add chocolate chips and mix well</li>
-                <li>Roll 2 TBS of dough into balls and place on baking pan</li>
-                <li>Bake for 8-10 minutes</li>
-            </ol>
-        </section>
-        
+                                    <sub>
+                                        Cookie
+                                    </sub>
+                                </sup>
+                            </sub>
+                        </sup>
+                    </sub>
+                </sup>
+            </h1>
+            <img src="../picture/cookie.webp" width="200" alt="Cookie">
+            <br>
+            <small>Cookies are great</small>
+            <hr>
+            <br>
+            <section>
+                <h2><u>Ingredients</u></h2>
+                <details>
+                    <summary>
+                        Click here for a list of ingredients
+                    </summary>
+                    <ul>
+                        <li>1 cup <span>salted butter</span></li>
+                        <li>1 cup white sugar</li>
+                        <li>1 cut light brown sugar</li>
+                        <li>2 tsp vanilla extract</li>
+                        <li>2 eggs</li>
+                        <li>3 cups all-purpose flower</li>
+                        <li>1 tsp baking soda</li>
+                        <li>1/2 tsp baking powder</li>
+                        <li>1 tsp sea salt</li>
+                        <li>2 cups chocolate chips</li>
+                    </ul>
+                </details>
+            </section>
+            <section>
+                <h2><u>Instructions</u></h2>
+                <ol>
+                    <li>Preheat oven to 375 degrees F.</li>
+                    <li>Mix flour, baking soda, salt, baking powder</li>
+                    <li>In a separate bowl, mix butter and sugars until well combined</li>
+                    <li>Beat in eggs and vanilla until fluffy</li>
+                    <li>Mix in dry ingredients until well combined</li>
+                    <li>Add chocolate chips and mix well</li>
+                    <li>Roll 2 TBS of dough into balls and place on baking pan</li>
+                    <li>Bake for 8-10 minutes</li>
+                </ol>
+            </section>
+        </div>
     </body>
     
 </html>
