--- a/html/turtle.html
+++ b/html/turtle.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <title>Turtles</title>
-        <link rel="stylesheet" href="../css/general.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <nav class="nav">
