--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="turtles">
                         <div>
                             <h2>Turtles are great</h2>
-                            <button onclick="window.location.href = 'html/turtle.html';">Turtle Facts</button>
+                            <button onclick="window.location.href = 'html/turtle.html';">Turtles</button>
                         </div>
                         <!-- <a href="html/turtle.html">Click here for random turtle facts</a> -->
                         <img src="picture/turtle.webp" width="200" alt="A very nice turtle">
