removed cookie tab

--- a/html/turtle.html
+++ b/html/turtle.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a class="active"href="#">Turtle</a></li>
-                <li><a href="cookie.html">Cookie</a></li>
+                <!-- <li><a href="cookie.html">Cookie</a></li> -->
             </ul>
         </nav>
         <div class="flex-container">
