--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="html/turtle.html">Turtle</a></li>
-                <li><a href="html/cookie.html">Cookie</a></li>
+                <!-- <li><a href="html/cookie.html">Cookie</a></li> -->
             </ul>
         </nav>
         <div class="content">
@@ -31,20 +31,19 @@
                             <button onclick="window.location.href = 'html/turtle.html';">Turtles</button>
                         </div>
                         <!-- <a href="html/turtle.html">Click here for random turtle facts</a> -->
-                        <img src="picture/turtle.webp" width="200" alt="A very nice turtle">
+                        <img src="picture/turtle.webp" alt="A very nice turtle">
                     </div>
-                    <div class="cookies">
+                    <!-- <div class="cookies">
                         <h2>Cookies are also great</h2>
                         <p>Click here for a cookie recipe</p>
                         <button onclick="window.location.href = 'html/cookie.html';">Cookie Recipe</button>
-                        <!-- <a href="html/cookie.html">Click here for a cookie recipe</a> -->
-                        <!-- <h5>Click this button for a cookie recipe</h5>
+                        <a href="html/cookie.html">Click here for a cookie recipe</a>
+                        <h5>Click this button for a cookie recipe</h5>
                         <button onclick="window.location.href = 'cookie.html';">
                             Cookie
-                        </button> -->
-                    </div>
-                </div>
-                
+                        </button>
+                    </div> -->
+                </div>  
             </div>        
             <div class="parallax">
                 <h1 id="thanks">Thanks for visiting</h1>
